[package]
name = "wg-nif"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "wg_nif"
crate-type = ["cdylib"]

[dependencies]
wg-core = { path = "../wg-core", features = ["semantic"] }
rustler = "0.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints.rust]
unsafe_code = "allow"
