[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-wg"
version = "1.0.0"
description = "Wiki-Graph plugin for Hermes Agent — tools, slash commands, and lifecycle hooks for the wg knowledge graph"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Taeyun Jang", email = "taeyun16@pm.me" }]
keywords = ["hermes-agent", "wg", "knowledge-graph", "wiki", "agent-plugin"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Tools and hooks shell out to the `wg` CLI by default. wg-python
    # is optional — when installed, the plugin uses the in-process
    # PyO3 bindings instead of subprocess for ~100× lower latency.
    "PyYAML>=6.0",
]

[project.optional-dependencies]
binding = ["wg-python>=0.1"]
test = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/aspect-build/wg"
Documentation = "https://github.com/aspect-build/wg/tree/main/plugins/hermes"
Source = "https://github.com/aspect-build/wg/tree/main/plugins/hermes"
Issues = "https://github.com/aspect-build/wg/issues"

# Hermes auto-discovers plugins via this entry point group.
[project.entry-points."hermes.plugins"]
wg = "hermes_wg.plugin:register"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_wg"]

[tool.hatch.build.targets.wheel.force-include]
"plugin.yaml" = "hermes_wg/plugin.yaml"
