[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-aidememo"
version = "1.0.0"
description = "AideMemo plugin for Hermes Agent — tools, slash commands, and lifecycle hooks for the aidememo knowledge graph"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Taeyun Jang", email = "taeyun16@pm.me" }]
keywords = ["hermes-agent", "aidememo", "knowledge-graph", "wiki", "agent-plugin"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aidememo-agent-sdk>=0.1",
    # Tools and hooks shell out to the `aidememo` CLI by default. aidememo-python
    # is optional — when installed, the plugin uses the in-process
    # PyO3 bindings instead of subprocess for ~100× lower latency.
    "PyYAML>=6.0",
]

[project.optional-dependencies]
binding = ["aidememo-python>=0.1"]
test = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/taeyun16/aidememo"
Documentation = "https://github.com/taeyun16/aidememo/tree/main/plugins/hermes"
Source = "https://github.com/taeyun16/aidememo/tree/main/plugins/hermes"
Issues = "https://github.com/taeyun16/aidememo/issues"

# Hermes auto-discovers plugins via this entry point group.
[project.entry-points."hermes.plugins"]
aidememo = "hermes_aidememo.plugin:register"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_aidememo"]
# `plugin.yaml` and `skills/` live inside src/hermes_aidememo/ now (so a
# filesystem `<HERMES_HOME>/plugins/aidememo/` symlink to that directory
# is self-contained), and hatchling picks them up automatically as
# package data — no force-include block needed.
